Refactor: Implement domain exceptions and resolve project-wide null safety warnings
- Introduced custom domain exceptions: BaseException, ResourceNotFoundException, ConflictException, and BusinessException.
- Replaced generic RuntimeExceptions with specific domain exceptions in core services.
- Applied @NonNull and @Nullable annotations project-wide for strict null safety.
- Resolved numerous null safety and type safety warnings identified by static analysis.
- Cleaned up unused imports and dead code.
- Updated unit tests to match new exception types and null safety contracts.
- Verified changes with successful Maven compilation and passing unit tests.